# swelldom-scrape

./: .gitignore  README.md  pyproject.toml  ruff.toml  run.py
src/: database.py  schema.py  scraper.py  utils.py
